<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="110dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/bookcover"
        android:gravity="center"
        android:src="@mipmap/ic_bookcover" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="cursive"
        android:text="@string/headline_bookname_enter"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/txtBookInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/bookinput"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/btnfetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fetch" />

</LinearLayout>
