<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDetailbookcover"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/bookcover"
                android:gravity="center"
                android:src="@mipmap/ic_bookcover" />

            <TextView
                android:id="@+id/txttitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/mtitle"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtauthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/mauthor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/mprice"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingBottom="50dp"
                android:fontFamily="cursive"
                android:hint="@string/mdescription"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>